--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <button id="generate">Generate</button>
     <div>
       <label for="num_of_cols">Array Size</label>
-      <input type="range" id="num_of_cols" name="volume" min="10" max="100">
+      <input type="range" id="num_of_cols" name="volume" min="10" max="100" value="60">
       <label for="speed">Speed</label>
-      <input type="range" id="speed" name="volume" min="20" max="180" value="140">
+      <input type="range" id="speed" name="volume" min="20" max="180" value="150">
     </div>
     <form action="">
       <input type="radio" name="algorithm" id="bubble" checked="true">
