--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <nav>
     <button id="generate">Generate</button>
-    <div>
+    <div class="sliders">
       <label for="num_of_cols">Array Size</label>
       <input type="range" id="num_of_cols" name="volume" min="10" max="100" value="60">
       <label for="speed">Speed</label>
