--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <nav>
-    <button id="generate">Generate</button>
+    <button id="generate">Generate (g)</button>
     <div class="sliders">
       <label for="num_of_cols">Array Size</label>
       <input type="range" id="num_of_cols" name="volume" min="10" max="100" value="60">
@@ -33,7 +33,7 @@
       <input type="radio" name="algorithm" id="quick">
       <label for="quick">Quick</label>
     </form>
-    <button id="sort">Sort</button>
+    <button id="sort">Sort (s)</button>
   </nav>
   <div class="main">
   </div>
