--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <title>Sorting Visualizer</title>
   <link rel="stylesheet" href="style.css">
   <script src="scripts/index.js" type="module"></script>
-  <link rel="icon" href="icon.png">
+  <link rel="icon" href="image/icon.png">
+  <link rel="preconnect" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
