--- a/index.html
+++ b/index.html
@@ -2,6 +2,80 @@
 <html lang="en">
 
 <head>
+  <style>
+    /* body part */
+    body {
+      padding: 0;
+      margin: 0;
+      background: #FDEFEF;
+      color: #fff;
+      font-family: 'Inter', sans-serif;
+    }
+
+    * {
+      box-sizing: border-box;
+      font-weight: 500;
+    }
+
+    /* end body part */
+    nav {
+      height: 10vh;
+      width: 100vw;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background: #082032;
+      padding: 0 3vw;
+    }
+
+    button {
+      font-family: 'Inter', sans-serif;
+      background: none;
+      color: #fff;
+      font-size: 1.2rem;
+      border: none;
+      cursor: pointer;
+    }
+
+    /* algorithm selection */
+
+    input[type="radio"] {
+      display: none;
+    }
+
+    label {
+      cursor: pointer;
+      margin: 0 1rem;
+    }
+
+    input[type="radio"]:checked+label {
+      color: #FF4C29;
+    }
+
+    /* end algorithm selection */
+
+    /* columns part */
+    .main {
+      height: 90vh;
+      display: flex;
+      justify-content: center;
+      align-items: flex-end;
+    }
+
+    .el {
+      background: #3498db;
+      margin: 0 .1vw;
+      color: #082032;
+      font-size: 1vw;
+      overflow: hidden;
+      text-align: center;
+    }
+
+    .targeted {
+      background: #FF4C29 !important;
+    }
+  </style>
+
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
